syntax = "proto3";

option csharp_namespace = "KGTT_Educate.Services.Account";

service UserService {
	rpc GetUserGroup (GetUserGroupRequest) returns (GetUserGroupResponse);
    rpc GetUserRole (GetUserRoleRequest) returns (GetUserRoleResponse);
    rpc GetGroup (GetGroupRequest) returns (GetGroupResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);

}

// User
message UserDTO {
    string id = 1;
    string login = 2;
    string email = 3;
    string last_name = 6;
    string first_name = 7;
    string middle_name = 8;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    UserDTO user = 1;
}

// Role

message GrpcRole {
    string id = 1;
    string name = 2;
}

// Group
message GroupDTO {
    string id = 1;
    string name = 2;
}

message GetGroupRequest {
    string id = 1;
}

message GetGroupResponse {
    GroupDTO group = 1;
}

// UserGroup

message GetUserGroupRequest {
    string group_id = 1;
}

message GetUserGroupResponse {
    repeated UserGroupDTO user_group = 1;
}

message UserGroupDTO {
    UserDTO user = 1;
    GroupDTO group = 2;
}

// UserRole

message GetUserRoleRequest {
    string user_id = 1;
}

message GetUserRoleResponse {
    UserRoleDTO user_role = 1;
}

message UserRoleDTO {
    UserDTO user = 1;
    GrpcRole role = 2;
}